--- a/notebooks/reports/OpenAI/5.1.1_ChatGPT_zeroshot_per_species.ipynb
+++ b/notebooks/reports/OpenAI/5.1.1_ChatGPT_zeroshot_per_species.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import numpy as np\n",
     "import glob\n",
     "from tqdm import tqdm\n",
+    "import ast\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -27,6 +28,21 @@
    "source": [
     "load_dotenv()\n",
     "openai.api_key = os.environ['OPENAI_API']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_present_traits(species, df):\n",
+    "\n",
+    "    s = df.loc[species]\n",
+    "    GT_traits = list(s.where(s == 1).dropna().index)\n",
+    "    empty_traits = [F\"{Entity}:\" for (Entity, Value) in GT_traits]\n",
+    "\n",
+    "    return GT_traits, empty_traits"
    ]
   },
   {
@@ -91,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +116,7 @@
        "'Avicennia germinans'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +160,7 @@
        " 'Seed colour']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,31 +176,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can you create semantic triples for the following traits ['Life form', 'Leaf position', 'Leaf composition', 'Leaf shape', 'Leaf margin', 'Leaf upper side', 'Leaf lower side', 'Leaf glands', 'Leaf rachis', 'Thorns/spines', 'Stipules', 'Inflorescence type', 'Sepals / calyx shape', 'Sepals / calyx numer', 'Petals / corolla shape', 'Petals / corolla number', 'Petals / corolla colour', 'Stamen shape', 'Stamen number', 'Fruit type', 'Fruit shape', 'Fruit colour', 'Aril colour', 'Seed colour'] for the species 'Avicennia germinans\n"
+      "Can you create semantic triples for the following traits ['Life form', 'Leaf position', 'Leaf composition', 'Leaf shape', 'Leaf margin', 'Leaf upper side', 'Leaf lower side', 'Leaf glands', 'Leaf rachis', 'Thorns/spines', 'Stipules', 'Inflorescence type', 'Sepals / calyx shape', 'Sepals / calyx numer', 'Petals / corolla shape', 'Petals / corolla number', 'Petals / corolla colour', 'Stamen shape', 'Stamen number', 'Fruit type', 'Fruit shape', 'Fruit colour', 'Aril colour', 'Seed colour'], for the species 'Avicennia germinans'? \n",
+      "Can you use the example format I provided:\n",
+      " ('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafPosition', 'alternate')\n"
      ]
     }
    ],
    "source": [
-    "question = F\"Can you create semantic triples for the following traits {traits}, for the species '{species}?\"\n",
-    "print(question)"
+    "question = F\"Can you create semantic triples for the following traits {traits}, for the species '{species}'? \\nCan you use the example format I provided:\\n\"\n",
+    "# print(question)\n",
+    "\n",
+    "example = (F\"http://dbpedia.org/resource/{species.replace(' ', '_')}\", \"http://dbpedia.org/ontology/leafPosition\", \"alternate\")\n",
+    "# print(example)\n",
+    "\n",
+    "content = F\"{question} {example}\"\n",
+    "print(content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "messages = [\n",
     "    # {\"role\": \"assistant\", \"content\": text},\n",
-    "    {\"role\": \"user\", \"content\": question}\n",
+    "    {\"role\": \"user\", \"content\": content}\n",
     "    ]\n",
     "# Call the ChatGPT API to generate a completion for the prompt\n",
     "completion = openai.ChatCompletion.create(\n",
@@ -195,45 +219,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject chat.completion id=chatcmpl-6uzSI32T8VCvQd2Byoh0gQ6hYCeCI at 0x7fd988727bf0> JSON: {\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"finish_reason\": \"stop\",\n",
+       "      \"index\": 0,\n",
+       "      \"message\": {\n",
+       "        \"content\": \"\\n\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/lifeForm', 'tree'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafPosition', 'alternate'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafComposition', 'simple'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafShape', 'lanceolate'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafMargin', 'entire'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafUpperSide', 'green'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafLowerSide', 'gray'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafGlands', 'absent'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/leafRachis', 'winged'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/thornsSpines', 'absent'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/stipules', 'absent'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/inflorescenceType', 'spike'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/sepalsCalyxShape', 'bell-shaped'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/sepalsCalyxNumer', '5'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/petalsCorollaShape', 'absent'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/petalsCorollaNumber', '0'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/petalsCorollaColour', 'NA'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/stamenShape', 'elongated'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/stamenNumber', '5 or 10'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/fruitType', 'berry'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/fruitShape', 'ovoid'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/fruitColour', 'green to black'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/arilColour', 'red'),\\n('http://dbpedia.org/resource/Avicennia_germinans', 'http://dbpedia.org/ontology/seedColour', 'brown')\",\n",
+       "        \"role\": \"assistant\"\n",
+       "      }\n",
+       "    }\n",
+       "  ],\n",
+       "  \"created\": 1679040622,\n",
+       "  \"id\": \"chatcmpl-6uzSI32T8VCvQd2Byoh0gQ6hYCeCI\",\n",
+       "  \"model\": \"gpt-3.5-turbo-0301\",\n",
+       "  \"object\": \"chat.completion\",\n",
+       "  \"usage\": {\n",
+       "    \"completion_tokens\": 812,\n",
+       "    \"prompt_tokens\": 202,\n",
+       "    \"total_tokens\": 1014\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "completion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Life form', 'tree'),\n",
+       " ('Leaf position', 'opposite'),\n",
+       " ('Leaf composition', 'entire'),\n",
+       " ('Leaf shape', 'lanceolate, elliptic'),\n",
+       " ('Leaf margin', 'entire'),\n",
+       " ('Leaf upper side', 'salt crystals'),\n",
+       " ('Leaf lower side', 'powdery'),\n",
+       " ('Leaf glands', 'absent'),\n",
+       " ('Thorns/spines', 'absent'),\n",
+       " ('Stipules', 'absent'),\n",
+       " ('Inflorescence type', 'panicle'),\n",
+       " ('Sepals / calyx shape', 'free'),\n",
+       " ('Sepals / calyx numer', '5'),\n",
+       " ('Petals / corolla shape', 'tubular'),\n",
+       " ('Petals / corolla number', '4'),\n",
+       " ('Petals / corolla colour', 'white'),\n",
+       " ('Stamen shape', 'longer than corolla'),\n",
+       " ('Stamen number', '4'),\n",
+       " ('Fruit type', 'capsule'),\n",
+       " ('Fruit shape', 'flattened ovate'),\n",
+       " ('Fruit colour', 'green'),\n",
+       " ('Seed colour', 'green')]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GT = extract_present_traits(species, df_Andrei)[0]\n",
+    "GT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = completion['choices'][0]['message']['content']\n",
+    "res\n",
+    "\n",
+    "list_of_tuples = ast.literal_eval(\"[\" + res.replace(\"\\n\", \"\") + \"]\")\n",
+    "# list_of_tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "1. Avicennia germinans is a life form of plant.\n",
-      "2. 'Leaf position' of Avicennia germinans is opposite.\n",
-      "3. 'Leaf composition' of Avicennia germinans is simple.\n",
-      "4. 'Leaf shape' of Avicennia germinans is ovate.\n",
-      "5. 'Leaf margin' of Avicennia germinans is entire.\n",
-      "6. 'Leaf upper side' of Avicennia germinans is glossy.\n",
-      "7. 'Leaf lower side' of Avicennia germinans is pale.\n",
-      "8. 'Leaf glands' of Avicennia germinans are present.\n",
-      "9. 'Leaf rachis' of Avicennia germinans is glabrous.\n",
-      "10. 'Thorns/spines' are absent in Avicennia germinans.\n",
-      "11. Avicennia germinans has stipules of size less than 1 cm.\n",
-      "12. The inflorescence type of Avicennia germinans is a panicle.\n",
-      "13. 'Sepals / calyx shape' of Avicennia germinans is ovate.\n",
-      "14. 'Sepals / calyx number' of Avicennia germinans is 4–5.\n",
-      "15. 'Petals / corolla shape' of Avicennia germinans is absent.\n",
-      "16. 'Petals / corolla number' of Avicennia germinans is absent.\n",
-      "17. 'Petals / corolla color' of Avicennia germinans is absent.\n",
-      "18. The shape of the stamen of Avicennia germinans is thread-like.\n",
-      "19. Avicennia germinans has a stamen number of 8–10.\n",
-      "20. The fruit type of Avicennia germinans is a capsule.\n",
-      "21. 'Fruit shape' of Avicennia germinans is ovoid.\n",
-      "22. 'Fruit color' of Avicennia germinans is black.\n",
-      "23. 'Aril color' of Avicennia germinans is absent or pale.\n",
-      "24. 'Seed color' of Avicennia germinans is brown.\n"
+      "GPT output: ('http://dbpedia.org/ontology/lifeForm', 'tree')\n",
+      "GT Data:    ('Life form', 'tree')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafPosition', 'alternate')\n",
+      "GT Data:    ('Leaf position', 'opposite')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafComposition', 'simple')\n",
+      "GT Data:    ('Leaf composition', 'entire')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafShape', 'lanceolate')\n",
+      "GT Data:    ('Leaf shape', 'lanceolate, elliptic')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafMargin', 'entire')\n",
+      "GT Data:    ('Leaf margin', 'entire')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafUpperSide', 'green')\n",
+      "GT Data:    ('Leaf upper side', 'salt crystals')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafLowerSide', 'gray')\n",
+      "GT Data:    ('Leaf lower side', 'powdery')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafGlands', 'absent')\n",
+      "GT Data:    ('Leaf glands', 'absent')\n",
+      "GPT output: ('http://dbpedia.org/ontology/leafRachis', 'winged')\n",
+      "GT Data:    ('Thorns/spines', 'absent')\n",
+      "GPT output: ('http://dbpedia.org/ontology/thornsSpines', 'absent')\n",
+      "GT Data:    ('Stipules', 'absent')\n",
+      "GPT output: ('http://dbpedia.org/ontology/stipules', 'absent')\n",
+      "GT Data:    ('Inflorescence type', 'panicle')\n",
+      "GPT output: ('http://dbpedia.org/ontology/inflorescenceType', 'spike')\n",
+      "GT Data:    ('Sepals / calyx shape', 'free')\n",
+      "GPT output: ('http://dbpedia.org/ontology/sepalsCalyxShape', 'bell-shaped')\n",
+      "GT Data:    ('Sepals / calyx numer', '5')\n",
+      "GPT output: ('http://dbpedia.org/ontology/sepalsCalyxNumer', '5')\n",
+      "GT Data:    ('Petals / corolla shape', 'tubular')\n",
+      "GPT output: ('http://dbpedia.org/ontology/petalsCorollaShape', 'absent')\n",
+      "GT Data:    ('Petals / corolla number', '4')\n",
+      "GPT output: ('http://dbpedia.org/ontology/petalsCorollaNumber', '0')\n",
+      "GT Data:    ('Petals / corolla colour', 'white')\n",
+      "GPT output: ('http://dbpedia.org/ontology/petalsCorollaColour', 'NA')\n",
+      "GT Data:    ('Stamen shape', 'longer than corolla')\n",
+      "GPT output: ('http://dbpedia.org/ontology/stamenShape', 'elongated')\n",
+      "GT Data:    ('Stamen number', '4')\n",
+      "GPT output: ('http://dbpedia.org/ontology/stamenNumber', '5 or 10')\n",
+      "GT Data:    ('Fruit type', 'capsule')\n",
+      "GPT output: ('http://dbpedia.org/ontology/fruitType', 'berry')\n",
+      "GT Data:    ('Fruit shape', 'flattened ovate')\n",
+      "GPT output: ('http://dbpedia.org/ontology/fruitShape', 'ovoid')\n",
+      "GT Data:    ('Fruit colour', 'green')\n",
+      "GPT output: ('http://dbpedia.org/ontology/fruitColour', 'green to black')\n",
+      "GT Data:    ('Seed colour', 'green')\n"
      ]
     }
    ],
    "source": [
-    "res = completion['choices'][0]['message']['content']\n",
-    "print(res)"
+    "for r, g in zip(list_of_tuples, GT):\n",
+    "    print(F\"GPT output: {r[1:]}\")\n",
+    "    print(F\"GT Data:    {g}\")"
    ]
   },
   {
