updated px layout

--- a/notebooks/reports/surveys/1.0_survey_analyses.ipynb
+++ b/notebooks/reports/surveys/1.0_survey_analyses.ipynb
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 119,
    "id": "f7563511",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1600,7 @@
            1
           ]
          },
-         "hole": 0.6,
+         "hole": 0.4,
          "hoverinfo": "label+percent+name",
          "labels": [
           "Can infer correct Value",
@@ -1637,7 +1637,7 @@
            1
           ]
          },
-         "hole": 0.6,
+         "hole": 0.4,
          "hoverinfo": "label+percent+name",
          "labels": [
           "Can infer correct Value",
@@ -1674,7 +1674,7 @@
            1
           ]
          },
-         "hole": 0.6,
+         "hole": 0.4,
          "hoverinfo": "label+percent+name",
          "labels": [
           "Can infer correct Value",
@@ -1711,7 +1711,7 @@
            0.425
           ]
          },
-         "hole": 0.6,
+         "hole": 0.4,
          "hoverinfo": "label+percent+name",
          "labels": [
           "Can infer correct Value",
@@ -1748,7 +1748,7 @@
            0.425
           ]
          },
-         "hole": 0.6,
+         "hole": 0.4,
          "hoverinfo": "label+percent+name",
          "labels": [
           "Can infer correct Value",
@@ -1785,7 +1785,7 @@
            0.425
           ]
          },
-         "hole": 0.6,
+         "hole": 0.4,
          "hoverinfo": "label+percent+name",
          "labels": [
           "Can infer correct Value",
@@ -1816,57 +1816,57 @@
         "annotations": [
          {
           "font": {
-           "size": 20
+           "size": 15
           },
           "showarrow": false,
-          "text": "BERT",
-          "x": 0.17,
-          "y": 0.75
+          "text": "PlantNet Dataset Bert",
+          "x": 0.05,
+          "y": 1.1
          },
          {
           "font": {
-           "size": 20
+           "size": 15
           },
           "showarrow": false,
-          "text": "JACC",
+          "text": "Palm Dataset Bert",
           "x": 0.5,
-          "y": 0.75
+          "y": 1.1
          },
          {
           "font": {
-           "size": 20
+           "size": 15
           },
           "showarrow": false,
-          "text": "PlantCLEF2019",
-          "x": 0.83,
-          "y": 0.75
+          "text": "Caribbean Dataset Bert",
+          "x": 0.95,
+          "y": 1.1
          },
          {
           "font": {
-           "size": 20
+           "size": 15
           },
           "showarrow": false,
-          "text": "SimBert",
-          "x": 0.17,
-          "y": 0.25
+          "text": "PlantNet Dataset Jacc",
+          "x": 0.05,
+          "y": -0.12
          },
          {
           "font": {
-           "size": 20
+           "size": 15
           },
           "showarrow": false,
-          "text": "Fasttext",
+          "text": "Palm Dataset Jacc",
           "x": 0.5,
-          "y": 0.25
+          "y": -0.12
          },
          {
           "font": {
-           "size": 20
+           "size": 15
           },
           "showarrow": false,
-          "text": "PlantCLEF2021",
-          "x": 0.83,
-          "y": 0.25
+          "text": "Caribbean Dataset Jacc",
+          "x": 0.95,
+          "y": -0.12
          }
         ],
         "template": {
@@ -2716,17 +2716,17 @@
     "                      i+1, j+1)\n",
     "\n",
     "# Use `hole` to create a donut-like pie chart\n",
-    "fig.update_traces(hole=.6, hoverinfo=\"label+percent+name\")\n",
+    "fig.update_traces(hole=.4, hoverinfo=\"label+percent+name\")\n",
     "\n",
     "fig.update_layout(\n",
     "    title_text=\"Trait Annotation\",\n",
     "    # Add annotations in the center of the donut pies.\n",
-    "    annotations=[dict(text='BERT', x=0.17, y=0.75, font_size=20, showarrow=False),\n",
-    "                 dict(text='JACC', x=0.5, y=0.75, font_size=20, showarrow=False),\n",
-    "                 dict(text='PlantCLEF2019', x=0.83, y=0.75, font_size=20, showarrow=False),\n",
-    "                 dict(text='SimBert', x=0.17, y=0.25, font_size=20, showarrow=False),\n",
-    "                 dict(text='Fasttext', x=0.5, y=0.25, font_size=20, showarrow=False),\n",
-    "                 dict(text='PlantCLEF2021', x=0.83, y=0.25, font_size=20, showarrow=False)]\n",
+    "    annotations=[dict(text='PlantNet Dataset Bert',  x=0.050, y=1.1, font_size=15, showarrow=False),\n",
+    "                 dict(text='Palm Dataset Bert',      x=0.500, y=1.1, font_size=15, showarrow=False),\n",
+    "                 dict(text='Caribbean Dataset Bert', x=0.950, y=1.1, font_size=15, showarrow=False),\n",
+    "                 dict(text='PlantNet Dataset Jacc',  x=0.050, y=-0.12, font_size=15, showarrow=False),\n",
+    "                 dict(text='Palm Dataset Jacc',      x=0.500, y=-0.12, font_size=15, showarrow=False),\n",
+    "                 dict(text='Caribbean Dataset Jacc', x=0.950, y=-0.12, font_size=15, showarrow=False)]\n",
     ")\n",
     "\n",
     "fig.show()"
