--- a/notebooks/reports/surveys/1.0_survey_analyses.ipynb
+++ b/notebooks/reports/surveys/1.0_survey_analyses.ipynb
@@ -521,18 +521,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "0eccd8e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd_melt = pd.melt(df_plot, id_vars=[\"Species\", \"Main Trait\", \"SIM\", \"Dataset\"], \n",
-    "        value_vars=['Can infer correct Value', 'None of the above', 'Can infer correct Entity', 'Can infer correct Quality'],\n",
-    "        var_name=None, value_name='value', col_level=None, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 69,
    "id": "f4b037f7",
    "metadata": {},
@@ -1578,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "id": "f7563511",
    "metadata": {},
    "outputs": [
@@ -1610,11 +1598,11 @@
          ],
          "marker": {
           "colors": [
-           "rgb(146, 123, 21)",
-           "rgb(177, 180, 34)",
-           "rgb(206, 206, 40)",
-           "rgb(175, 51, 21)",
-           "rgb(35, 36, 21)"
+           "rgb(33, 75, 99)",
+           "rgb(79, 129, 102)",
+           "rgb(151, 179, 100)",
+           "rgb(175, 49, 35)",
+           "rgb(36, 73, 147)"
           ]
          },
          "name": "Bert PlantNet",
@@ -1647,11 +1635,11 @@
          ],
          "marker": {
           "colors": [
-           "rgb(146, 123, 21)",
-           "rgb(177, 180, 34)",
-           "rgb(206, 206, 40)",
-           "rgb(175, 51, 21)",
-           "rgb(35, 36, 21)"
+           "rgb(33, 75, 99)",
+           "rgb(79, 129, 102)",
+           "rgb(151, 179, 100)",
+           "rgb(175, 49, 35)",
+           "rgb(36, 73, 147)"
           ]
          },
          "name": "Bert Palm",
@@ -1684,11 +1672,11 @@
          ],
          "marker": {
           "colors": [
-           "rgb(146, 123, 21)",
-           "rgb(177, 180, 34)",
-           "rgb(206, 206, 40)",
-           "rgb(175, 51, 21)",
-           "rgb(35, 36, 21)"
+           "rgb(33, 75, 99)",
+           "rgb(79, 129, 102)",
+           "rgb(151, 179, 100)",
+           "rgb(175, 49, 35)",
+           "rgb(36, 73, 147)"
           ]
          },
          "name": "Bert Caribbean",
@@ -1721,11 +1709,11 @@
          ],
          "marker": {
           "colors": [
-           "rgb(146, 123, 21)",
-           "rgb(177, 180, 34)",
-           "rgb(206, 206, 40)",
-           "rgb(175, 51, 21)",
-           "rgb(35, 36, 21)"
+           "rgb(33, 75, 99)",
+           "rgb(79, 129, 102)",
+           "rgb(151, 179, 100)",
+           "rgb(175, 49, 35)",
+           "rgb(36, 73, 147)"
           ]
          },
          "name": "Jacc PlantNet",
@@ -1758,11 +1746,11 @@
          ],
          "marker": {
           "colors": [
-           "rgb(146, 123, 21)",
-           "rgb(177, 180, 34)",
-           "rgb(206, 206, 40)",
-           "rgb(175, 51, 21)",
-           "rgb(35, 36, 21)"
+           "rgb(33, 75, 99)",
+           "rgb(79, 129, 102)",
+           "rgb(151, 179, 100)",
+           "rgb(175, 49, 35)",
+           "rgb(36, 73, 147)"
           ]
          },
          "name": "Jacc Palm",
@@ -1795,11 +1783,11 @@
          ],
          "marker": {
           "colors": [
-           "rgb(146, 123, 21)",
-           "rgb(177, 180, 34)",
-           "rgb(206, 206, 40)",
-           "rgb(175, 51, 21)",
-           "rgb(35, 36, 21)"
+           "rgb(33, 75, 99)",
+           "rgb(79, 129, 102)",
+           "rgb(151, 179, 100)",
+           "rgb(175, 49, 35)",
+           "rgb(36, 73, 147)"
           ]
          },
          "name": "Jacc Caribbean",
@@ -2701,6 +2689,9 @@
     "cafe_colors =  ['rgb(146, 123, 21)', 'rgb(177, 180, 34)', 'rgb(206, 206, 40)',\n",
     "                'rgb(175, 51, 21)', 'rgb(35, 36, 21)']\n",
     "\n",
+    "irises_colors = ['rgb(33, 75, 99)', 'rgb(79, 129, 102)', 'rgb(151, 179, 100)',\n",
+    "                 'rgb(175, 49, 35)', 'rgb(36, 73, 147)']\n",
+    "\n",
     "# Create subplots: use 'domain' type for Pie subplot\n",
     "fig = make_subplots(rows=2, cols=3, specs=[[{'type':'domain'}, {'type':'domain'}, {'type':'domain'}],\n",
     "                                           [{'type':'domain'}, {'type':'domain'}, {'type':'domain'}]])\n",
@@ -2712,7 +2703,7 @@
     "        fig.add_trace(go.Pie(labels=labels, \n",
     "                             values=df_sub.groupby([\"SIM\", \"Dataset\"]).sum()[['Can infer correct Value', 'None of the above', 'Can infer correct Entity', 'Can infer correct Quality']].iloc[0].values,\n",
     "                             name=sim + ' ' + dataset,\n",
-    "                             marker_colors=cafe_colors),\n",
+    "                             marker_colors=irises_colors),\n",
     "                      i+1, j+1)\n",
     "\n",
     "# Use `hole` to create a donut-like pie chart\n",
@@ -2730,6 +2721,193 @@
     ")\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "ba8ed6bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Main Trait</th>\n",
+       "      <th>SIM</th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>None</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lannea fruticosa</td>\n",
+       "      <td>leaf apex</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Value</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Strychnos spinosa</td>\n",
+       "      <td>petiole</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Value</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Keetia venosa</td>\n",
+       "      <td>vein</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Value</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Crescentia cujete</td>\n",
+       "      <td>inflorescences</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Value</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Crescentia cujete</td>\n",
+       "      <td>inflorescences</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Value</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87859</th>\n",
+       "      <td>Acacia polyacantha ssp. campylacantha</td>\n",
+       "      <td>flower shape</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Quality</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87860</th>\n",
+       "      <td>Acacia polyacantha ssp. campylacantha</td>\n",
+       "      <td>flower shape</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Quality</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87861</th>\n",
+       "      <td>Maerua angolensis</td>\n",
+       "      <td>plant type</td>\n",
+       "      <td>Jacc</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Quality</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87862</th>\n",
+       "      <td>Aphania senegalensis</td>\n",
+       "      <td>leaf apex</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Quality</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87863</th>\n",
+       "      <td>Khaya senegalensis</td>\n",
+       "      <td>leaf base</td>\n",
+       "      <td>Bert</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>Can infer correct Quality</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>87864 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Species      Main Trait   SIM   Dataset  \\\n",
+       "0                           Lannea fruticosa       leaf apex  Bert  PlantNet   \n",
+       "1                          Strychnos spinosa         petiole  Bert  PlantNet   \n",
+       "2                              Keetia venosa            vein  Bert  PlantNet   \n",
+       "3                          Crescentia cujete  inflorescences  Bert  PlantNet   \n",
+       "4                          Crescentia cujete  inflorescences  Bert  PlantNet   \n",
+       "...                                      ...             ...   ...       ...   \n",
+       "87859  Acacia polyacantha ssp. campylacantha    flower shape  Bert  PlantNet   \n",
+       "87860  Acacia polyacantha ssp. campylacantha    flower shape  Bert  PlantNet   \n",
+       "87861                      Maerua angolensis      plant type  Jacc  PlantNet   \n",
+       "87862                   Aphania senegalensis       leaf apex  Bert  PlantNet   \n",
+       "87863                     Khaya senegalensis       leaf base  Bert  PlantNet   \n",
+       "\n",
+       "                            None  value  \n",
+       "0        Can infer correct Value      0  \n",
+       "1        Can infer correct Value      1  \n",
+       "2        Can infer correct Value      0  \n",
+       "3        Can infer correct Value      1  \n",
+       "4        Can infer correct Value      1  \n",
+       "...                          ...    ...  \n",
+       "87859  Can infer correct Quality      1  \n",
+       "87860  Can infer correct Quality      0  \n",
+       "87861  Can infer correct Quality      0  \n",
+       "87862  Can infer correct Quality      0  \n",
+       "87863  Can infer correct Quality      1  \n",
+       "\n",
+       "[87864 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df_melt = pd.melt(df_plot, id_vars=[\"Species\", \"Main Trait\", \"SIM\", \"Dataset\"], \n",
+    "#         value_vars=['Can infer correct Value', 'None of the above', 'Can infer correct Entity', 'Can infer correct Quality'],\n",
+    "#         var_name='None', value_name='value', col_level=None, ignore_index=True)\n",
+    "\n",
+    "df_melt = pd.melt(df_plot, id_vars=[\"Species\", \"Main Trait\", \"SIM\", \"Dataset\"], \n",
+    "        value_vars=['Can infer correct Value', 'None of the above', 'Can infer correct Entity', 'Can infer correct Quality'],\n",
+    "        var_name='None', value_name='value', col_level=None, ignore_index=True)\n",
+    "\n",
+    "df_melt"
    ]
   }
  ],
